# django-postgresql-estimated-count

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
django_postgresql_estimated_count/: __init__.py  _functions.py  admin.py  paginator.py  query.py
scripts/: run-tests.sh
tests/: conftest.py  settings.py  test_admin.py  test_functions.py  test_paginator.py  test_query.py
tests/testapp/: admin.py  models.py
